# VerletSFML

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: Build.yml
src/: Application.cpp  Application.hpp  Main.cpp  Object.hpp  main.cpp  math.hpp  number_generator.hpp  renderer.hpp  solver.hpp
